crawler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler-deployment
  namespace: monkey-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: crawler
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crawler
    spec:
      containers:
        - name: crawler
          image: slowlight50/stock-crawler:8
          resources: {}
