community.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-deployment
  namespace: monkey-space
  labels:
    app: community
spec:
  replicas: 2
  selector:
    matchLabels:
      app: community
  template:
    metadata:
      labels:
        app: community
    spec:
      containers:
      - name: community
        image: dev210/monkey-community:latest
        ports:
        - containerPort: 80
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: community-service
  namespace: monkey-space
spec:
  type: LoadBalancer
  selector:
    app: community
  ports:
  - port: 8081
    targetPort: 80
