frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: monkey-ingress
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
      - name: frontend
        image: dev210/monkey-frontend:11
        ports:
        - containerPort: 80
        resources: {}
        
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: monkey-ingress
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
